# bored-bot

./: .gitignore  README.md  db.json  functions.py  init.sh  main.py  notes.py  pullre.sh  pyproject.toml  requirements.txt  settings.json  shell.nix  utilcmds.py
.github/workflows/: auto-upd.yaml
cogs/: funcmds.py  funstuffs.py  music.py  quirk.py  randstuff.py  teams.py  utilcmds.py  utils.py
lib/: db.py
old_cogs/: teams.py
